kubernetes/apps/pihole/manifest/v5/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  serviceName: pihole
  replicas: 2  # Adjust as needed
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
#          image: pihole/pihole:2025.04.0
          image: pihole/pihole:2024.07.0
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE  # Allow binding to privileged ports like 53
          ports:
            - containerPort: 53  # DNS UDP
              protocol: UDP
            - containerPort: 53  # DNS TCP
              protocol: TCP
            - containerPort: 80  # Web UI
              protocol: TCP
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
  volumeClaimTemplates:
    - metadata:
        name: pihole-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi  # Adjust as needed for your use case
