kubernetes/apps/pihole/manifest/v5/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-0-svc
  namespace: pihole
spec:
  selector:
    statefulset.kubernetes.io/pod-name: pihole-0
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: web
      port: 80
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: "$PIHOLE_FIRST_IP"
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-1-svc
  namespace: pihole
spec:
  selector:
    statefulset.kubernetes.io/pod-name: pihole-1
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: web
      port: 80
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: "$PIHOLE_SECOND_IP"
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: "$PIHOLE_LB"
